Minibatch generation done

--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -13,6 +13,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
@@ -139,18 +140,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['lens'] = {'train': lens[:train.shape[0]],\n",
-    "                'valid': lens[trainin.shape[0]: train.shape[0] + valid.shape[0]],\n",
-    "                'test': lens[train.shape[0] + valid.shape[0]:]}"
+    "data['lens'] = {'train': np.array(lens[:train.shape[0]]),\n",
+    "                'valid': np.array(lens[train.shape[0]: train.shape[0] + valid.shape[0]]),\n",
+    "                'test': np.array(lens[train.shape[0] + valid.shape[0]:])}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = np.concatenate((data['labels']['train'], data['labels']['valid']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le.fit(labels)\n",
+    "le.transform(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['label_encoder'] = le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +188,7 @@
        "['data.pkl']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,13 +196,6 @@
    "source": [
     "joblib.dump(data, 'data.pkl')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
