--- a/model_building.ipynb
+++ b/model_building.ipynb
@@ -11,7 +11,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from sklearn.externals import joblib\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import torch"
    ]
   },
   {
@@ -34,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['features', 'lens', 'labels'])"
+       "dict_keys(['features', 'labels', 'bounds', 'lens', 'label_encoder'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,22 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_split(data, split):\n",
     "    if split == 'train':\n",
-    "        return data['features'][: data['lens']['train']]\n",
+    "        return data['features'][: data['bounds']['train']]\n",
     "    elif split == 'valid':\n",
-    "        return data['features'][data['lens']['train']: data['lens']['train'] + data['lens']['valid']]\n",
+    "        return data['features'][data['bounds']['train']: data['bounds']['train'] + data['bounds']['valid']]\n",
     "    elif split == 'test':\n",
-    "        return data['features'][data['lens']['train'] + data['lens']['valid']:]"
+    "        return data['features'][data['bounds']['train'] + data['bounds']['valid']:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,36 +103,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_batches(data, split, batch_size,\n",
     "                     randomise=False):\n",
     "    features = get_split(data, split)\n",
-    "    labels = data['labels'][split]\n",
+    "    n = features.shape[0]\n",
+    "    try:\n",
+    "        labels = data['label_encoder'].transform(data['labels'][split])\n",
+    "    except:\n",
+    "        labels = np.zeros(features.shape[0])\n",
     "    lens = data['lens'][split]\n",
     "    for batch_idx in generate_batch_idx(n, batch_size, randomise):\n",
-    "        return features[batch_idx], labels[batch_idx], lens[batch_idx]"
+    "        batch_data = features[batch_idx]\n",
+    "        batch_labels = labels[batch_idx]\n",
+    "        batch_lens = lens[batch_idx]\n",
+    "#         batch_data = torch.from_numpy(batch_data).float()\n",
+    "#         batch_labels = torch.from_numpy(labels[batch_idx]).float()\n",
+    "#         lens = torch.from_numpy(lens[batch_idx]).float()\n",
+    "        yield batch_data, batch_labels, batch_lens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['features', 'lens', 'train_len', 'valid_len', 'test'])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "def sort_batch(batch, targets, lengths):\n",
+    "    \"\"\"\n",
+    "    Sort a minibatch by the length of the sequences with the longest sequences first\n",
+    "    return the sorted batch targes and sequence lengths.\n",
+    "    This way the output can be used by pack_padded_sequences(...)\n",
+    "    \"\"\"\n",
+    "    perm_idx = np.argsort(lengths)[::-1]\n",
+    "    seq_lengths = lengths[perm_idx]\n",
+    "    seq_tensor = batch[perm_idx]\n",
+    "    target_tensor = targets[perm_idx]\n",
+    "    return seq_tensor, target_tensor, seq_lengths\n",
+    "\n",
+    "def pad_batch(batch, lens):\n",
+    "    max_len = max(lens)\n",
+    "    batch_size = batch.shape[0]\n",
+    "    num_feature = batch[0].shape[1]\n",
+    "    padded_seqs = np.zeros((batch_size, max_len, num_feature))\n",
+    "    \n",
+    "    for i, l in enumerate(lens):\n",
+    "        padded_seqs[i, :l, :] = batch[i][:l]\n",
+    "\n",
+    "    return padded_seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def torch_batch(batch, targets):\n",
+    "    return torch.from_numpy(batch).float(), torch.from_numpy(targets).long()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for batch_data, batch_labels, batch_lens in generate_batches(data, 'train', 32, True):\n",
+    "    batch_data, batch_labels, batch_lens = sort_batch(batch_data, batch_labels, batch_lens)\n",
+    "    batch_data = pad_batch(batch_data, batch_lens)\n",
+    "    batch_data, batch_labels = torch_batch(batch_data, batch_labels)\n"
+   ]
   },
   {
    "cell_type": "code",
