--- a/model_building.ipynb
+++ b/model_building.ipynb
@@ -12,7 +12,10 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from sklearn.externals import joblib\n",
     "from collections import Counter\n",
-    "import torch"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -59,8 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def standard_scale(data, lens):\n",
+    "def standard_scale(data):\n",
     "    features = data['features']\n",
+    "    lens = np.concatenate((data['lens']['train'],data['lens']['valid'],data['lens']['test']))\n",
     "    features = np.concatenate(features, axis=0)\n",
     "    features = StandardScaler().fit_transform(features)\n",
     "    ret = []\n",
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,21 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sort_batch(batch, targets, lengths):\n",
-    "    \"\"\"\n",
-    "    Sort a minibatch by the length of the sequences with the longest sequences first\n",
-    "    return the sorted batch targes and sequence lengths.\n",
-    "    This way the output can be used by pack_padded_sequences(...)\n",
-    "    \"\"\"\n",
-    "    perm_idx = np.argsort(lengths)[::-1]\n",
-    "    seq_lengths = lengths[perm_idx]\n",
-    "    seq_tensor = batch[perm_idx]\n",
-    "    target_tensor = targets[perm_idx]\n",
-    "    return seq_tensor, target_tensor, seq_lengths\n",
+    "# def sort_batch(batch, targets, lengths):\n",
+    "#     \"\"\"\n",
+    "#     Sort a minibatch by the length of the sequences with the longest sequences first\n",
+    "#     return the sorted batch targes and sequence lengths.\n",
+    "#     This way the output can be used by pack_padded_sequences(...)\n",
+    "#     \"\"\"\n",
+    "#     perm_idx = np.argsort(lengths)[::-1]\n",
+    "#     seq_lengths = lengths[perm_idx]\n",
+    "#     seq_tensor = batch[perm_idx]\n",
+    "#     target_tensor = targets[perm_idx]\n",
+    "#     return seq_tensor, target_tensor, seq_lengths\n",
     "\n",
     "def pad_batch(batch, lens):\n",
     "    max_len = max(lens)\n",
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +172,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch_data, batch_labels, batch_lens in generate_batches(data, 'train', 32, True):\n",
-    "    batch_data, batch_labels, batch_lens = sort_batch(batch_data, batch_labels, batch_lens)\n",
-    "    batch_data = pad_batch(batch_data, batch_lens)\n",
-    "    batch_data, batch_labels = torch_batch(batch_data, batch_labels)\n"
+    "standard_scale(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for batch_data, batch_labels, batch_lens in generate_batches(data, 'train', 32, True):\n",
+    "#     batch_data, batch_labels, batch_lens = sort_batch(batch_data, batch_labels, batch_lens)\n",
+    "#     batch_data = pad_batch(batch_data, batch_lens)\n",
+    "#     batch_data, batch_labels = torch_batch(batch_data, batch_labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HARNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.rnn = nn.GRU(input_size=19,\n",
+    "                          hidden_size=19,\n",
+    "                          num_layers=2,\n",
+    "                          batch_first=True)\n",
+    "        self.lin1 = nn.Linear(19, 19, bias=True)\n",
+    "        self.lin2 = nn.Linear(19, 22, bias=True)\n",
+    "    \n",
+    "    def forward(self, data, lens):\n",
+    "        x, _ = self.rnn(data)\n",
+    "        x = torch.cat([seq[l-1].view(1, -1) for l, seq in zip(lens, x)], dim=0)\n",
+    "        x = self.lin1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.lin2(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [1] | Batch 9 | Loss: 3.107308997048272:   0%|          | 0/2 [06:45<?, ?it/s] \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-65530e06655b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_lens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjective\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             \u001b[0moptimiser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0mrunning_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/analytics/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m     91\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \"\"\"\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/analytics/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 2\n",
+    "batch_size = 32\n",
+    "objective = nn.CrossEntropyLoss()\n",
+    "model = HARNet()\n",
+    "optimiser = torch.optim.Adam(model.parameters(), weight_decay=0.0)\n",
+    "running_loss = 0\n",
+    "running_batch = 0\n",
+    "with tqdm(range(1, num_epochs + 1)) as pbar:\n",
+    "    for epoch in pbar:\n",
+    "        for batch_num, (batch_data, batch_labels, batch_lens) in enumerate(generate_batches(data, 'train',\n",
+    "                                                                     batch_size, True), 1):\n",
+    "            batch_data = pad_batch(batch_data, batch_lens)\n",
+    "            batch_data, batch_labels = torch_batch(batch_data, batch_labels)\n",
+    "            optimiser.zero_grad()\n",
+    "            preds = model(batch_data, batch_lens)\n",
+    "            loss = objective(preds, batch_labels)\n",
+    "            loss.backward()\n",
+    "            optimiser.step()\n",
+    "            running_loss += loss.item()\n",
+    "            running_batch += 1\n",
+    "            pbar.set_description(f'[Epoch: {epoch}] | Batch {batch_num} | Loss: {running_loss/running_batch}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.3051, 0.2735, 0.2559, 0.2578, 0.2292, 0.2516, 0.2978, 0.2681, 0.2497,\n",
+       "         0.2454, 0.2522, 0.2500, 0.2307, 0.2589, 0.3157, 0.2654, 0.2487, 0.2583,\n",
+       "         0.3034, 0.3029, 0.2568, 0.2538, 0.2926, 0.2872, 0.2769, 0.2577, 0.2503,\n",
+       "         0.2391, 0.3435, 0.2506, 0.2492, 0.2732], grad_fn=<MaxBackward0>),\n",
+       " tensor([17, 17, 16, 17, 16, 16, 17, 16, 16, 17, 16, 17, 17, 17, 17, 17, 17, 16,\n",
+       "         17, 16, 16, 17, 16, 16, 17, 17, 16, 17, 17, 17, 17, 17]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.max(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([16, 10, 14, 18, 21,  9,  6, 18, 16, 12,  8,  6,  8, 19, 11,  8, 13, 20,\n",
+       "         0,  8,  8,  7, 16, 17, 21, 14,  9, 20,  6,  0,  7,  2])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'stand-to-sit'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['label_encoder'].classes_[16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'v-cut-left-Lfirst'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['label_encoder'].classes_[17]"
    ]
   },
   {
@@ -191,18 +365,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
