Fixed bug in feature_extraction

--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -155,7 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = np.concatenate((data['labels']['train'], data['labels']['valid']))"
+    "labels = np.concatenate((data['labels']['train'], data['labels']['valid']))\n",
+    "le = LabelEncoder()"
    ]
   },
   {
