Added experiments with RNN

--- a/RNN-avg.ipynb
+++ b/RNN-avg.ipynb
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_batches(data, split, batch_size,\n",
-    "                     time_steps=10, stride=5, randomise=False):\n",
+    "                     skip=5, randomise=False):\n",
     "    features = get_split(data, split)\n",
     "\n",
     "    try:\n",
@@ -137,10 +137,12 @@
     "        mat = features[i]\n",
     "        label = labels[i]\n",
     "        l = lens[i]\n",
-    "        for j in range(0, len(mat) - time_steps, stride):\n",
-    "            new_features.append(mat[j: j + time_steps, 5:].flatten())\n",
-    "            new_labels.append(label)\n",
-    "            new_lens.append(i)\n",
+    "        idx = np.arange(0, mat.shape[0], skip)\n",
+    "        mat = np.concatenate([mat[i:i+skip].mean(axis=0).reshape(1, -1) for i in idx], axis=0)\n",
+    "        new_features.append(mat)\n",
+    "        new_labels.append(label)\n",
+    "        new_lens.append(mat.shape[0])\n",
+    "    \n",
     "    features = np.array(new_features)\n",
     "    labels = np.array(new_labels)\n",
     "    lens = np.array(new_lens)\n",
@@ -150,15 +152,12 @@
     "        batch_data = features[batch_idx]\n",
     "        batch_labels = labels[batch_idx]\n",
     "        batch_lens = lens[batch_idx]\n",
-    "#         batch_data = torch.from_numpy(batch_data).float()\n",
-    "#         batch_labels = torch.from_numpy(labels[batch_idx]).float()\n",
-    "#         lens = torch.from_numpy(lens[batch_idx]).float()\n",
     "        yield batch_data, batch_labels, batch_lens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,18 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_preds(model, data, split, batch_size, time_steps, stride):\n",
+    "def get_preds(model, data, split, batch_size, stride):\n",
     "    model.eval()\n",
     "    preds = []\n",
     "    labels = []\n",
     "    with torch.no_grad():\n",
     "        for b_data, b_labels, b_lens in generate_batches(data, split, batch_size, \n",
-    "                                                         time_steps, stride, False):\n",
-    "#             b_data = pad_batch(b_data, b_lens)\n",
+    "                                                         stride, False):\n",
+    "            b_data = pad_batch(b_data, b_lens)\n",
     "            b_data, b_labels = torch_batch(b_data, b_labels)\n",
     "            preds.append(model(b_data, b_lens))\n",
     "            labels.append(b_labels)\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,22 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "class HARNet(nn.Module):\n",
-    "    def __init__(self, time_steps):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.lin1 = nn.Linear(14*time_steps, 128)\n",
-    "        self.lin2 = nn.Linear(128, 64, bias=True)\n",
+    "        self.rnn = nn.GRU(14, 64, num_layers=2)\n",
+    "        self.lin2 = nn.Linear(64, 64, bias=True)\n",
     "        self.lin3 = nn.Linear(64, 22, bias=True)\n",
     "    \n",
     "    def forward(self, data, lens):\n",
-    "        x = self.lin1(data)\n",
-    "        x = F.relu(x)\n",
+    "        x, _ = self.rnn(data[:, :, 5:])\n",
+    "        x = torch.cat([seq[l-1].view(1, -1) for l, seq in zip(lens, x)], dim=0)\n",
     "        x = self.lin2(x)\n",
-    "        x = F.relu(x)\n",
+    "        x = F.sigmoid(x)\n",
     "        x = self.lin3(x)\n",
     "        return x"
    ]
@@ -263,63 +262,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Epoch: 1] | Batch 1371 | Loss: 0.8471988553139174: : 1371it [10:22,  2.20it/s]\n",
+      "\r",
       "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation loss improved from inf to 2.334031105041504\n",
-      "Validation accuracy: 0.5539480949751519\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Epoch: 2] | Batch 1371 | Loss: 0.6236968654419148: : 1371it [08:52,  2.58it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation loss did not improve\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Epoch: 3] | Batch 1371 | Loss: 0.5332662394139422: : 1371it [07:56,  2.88it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation loss did not improve\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Epoch: 4] | Batch 243 | Loss: 0.5189983667750202: : 243it [03:30,  1.14it/s]"
      ]
     }
    ],
    "source": [
-    "num_epochs = 10000\n",
+    "num_epochs = 500\n",
     "batch_size = 32\n",
-    "time_steps = 1000\n",
-    "stride = 200\n",
+    "stride = 5\n",
     "objective = nn.CrossEntropyLoss()\n",
-    "model = HARNet(time_steps)\n",
+    "model = HARNet()\n",
     "optimiser = torch.optim.Adam(model.parameters(), weight_decay=0.0)\n",
     "running_loss = 0\n",
     "running_batch = 0\n",
@@ -327,22 +280,23 @@
     "\n",
     "for epoch in range(1, num_epochs + 1):\n",
     "    with tqdm(enumerate(generate_batches(data, 'train', batch_size,\n",
-    "                                         time_steps, stride, True), 1)) as pbar:\n",
+    "                                         stride, True), 1)) as pbar:\n",
     "        model.train()\n",
     "        for batch_num, (batch_data, batch_labels, batch_lens) in pbar:\n",
-    "#             batch_data = pad_batch(batch_data, batch_lens)\n",
+    "            batch_data = pad_batch(batch_data, batch_lens)\n",
     "            batch_data, batch_labels = torch_batch(batch_data, batch_labels)\n",
     "            optimiser.zero_grad()\n",
     "            preds = model(batch_data, batch_lens)\n",
     "            loss = objective(preds, batch_labels)\n",
     "            loss.backward()\n",
+    "            torch.nn.utils.clip_grad_norm_(model.parameters(), 2, norm_type=2)\n",
     "            optimiser.step()\n",
     "            running_loss += loss.item()\n",
     "            running_batch += 1\n",
     "            pbar.set_description(f'[Epoch: {epoch}] | Batch {batch_num} | Loss: {running_loss/running_batch}')\n",
     "            \n",
     "    valid_preds, valid_labels = get_preds(model, data, 'valid',\n",
-    "                                          64, time_steps, stride)\n",
+    "                                          64, stride)\n",
     "    \n",
     "    valid_loss = objective(valid_preds, valid_labels).item()\n",
     "    \n",
@@ -355,6 +309,74 @@
     "            torch.save(model.state_dict(), f)\n",
     "    else:\n",
     "        print('Validation loss did not improve')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_preds, train_labels = get_preds(model, data, 'train',\n",
+    "                                          64, stride)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loss = objective(train_preds, train_labels).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0566143989562988"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc = get_accuracy(train_preds, train_labels, data['label_encoder'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6344617725370864"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc"
    ]
   },
   {
