--- a/benchmarking.ipynb
+++ b/benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from collections import Counter"
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +89,7 @@
        " ('stair-up', 234)]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,21 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feature_engineer(mat):\n",
+    "    mat = mat[:, 5:]\n",
     "    avg = mat.mean(axis=0).reshape(1, -1)\n",
-    "    min = mat.min(axis=0).reshape(1, -1)\n",
+    "#     min = mat.min(axis=0).reshape(1, -1)\n",
     "    max = mat.max(axis=0).reshape(1, -1)\n",
     "    std = mat.std(axis=0).reshape(1, -1)\n",
-    "    return np.concatenate((max, avg, min, std), axis=1).flatten()"
+    "    return np.concatenate((max, avg, std), axis=1).flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,39 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5258, 4)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_features = np.concatenate(train['features'].values).reshape(-1, 19*4)\n",
+    "train_features = np.concatenate(train['features'].values).reshape(-1, 19*3)\n",
     "# train_features /= train_features.max(axis=0)\n",
-    "valid_features = np.concatenate(valid['features'].values).reshape(-1, 19*4)\n",
+    "valid_features = np.concatenate(valid['features'].values).reshape(-1, 19*3)\n",
     "# valid_features /= valid_features.max(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "train_features = scaler.fit_transform(train_features)\n",
+    "valid_features = scaler.transform(valid_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -177,34 +170,32 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=None, solver='liblinear',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+       "0.9476987447698745"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lr = LogisticRegression(solver='liblinear')\n",
-    "lr.fit(np.concatenate(train_features, train['Label'])"
+    "lr.fit(train_features, train['Label'])\n",
+    "accuracy_score(lr.predict(train_features), train['Label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.45962732919254656"
+       "0.47737355811889975"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -225,32 +216,32 @@
      "text": [
       "                         precision    recall  f1-score   support\n",
       "\n",
-      " curve-left-spin-Lfirst       0.46      0.82      0.59        40\n",
-      " curve-left-spin-Rfirst       0.09      0.03      0.04        80\n",
+      " curve-left-spin-Lfirst       0.32      0.20      0.25        40\n",
+      " curve-left-spin-Rfirst       0.32      0.17      0.23        80\n",
       "        curve-left-step       0.00      0.00      0.00        60\n",
-      "curve-right-spin-Lfirst       0.23      0.41      0.29        61\n",
-      "curve-right-spin-Rfirst       0.45      0.53      0.49        60\n",
-      "       curve-right-step       0.58      0.33      0.42        58\n",
-      "           jump-one-leg       0.23      0.80      0.36        40\n",
-      "           jump-two-leg       0.56      0.90      0.69        40\n",
-      "   lateral-shuffle-left       0.31      0.42      0.36        43\n",
-      "  lateral-shuffle-right       0.28      0.17      0.22        40\n",
-      "                    run       0.56      0.15      0.24        60\n",
-      "                    sit       1.00      0.96      0.98        49\n",
-      "           sit-to-stand       0.86      0.98      0.91        49\n",
-      "             stair-down       0.47      0.93      0.62        44\n",
-      "               stair-up       0.53      1.00      0.69        44\n",
-      "                  stand       0.98      1.00      0.99        49\n",
-      "           stand-to-sit       0.98      0.84      0.90        49\n",
-      "      v-cut-left-Lfirst       0.33      0.33      0.33        60\n",
-      "      v-cut-left-Rfirst       0.00      0.00      0.00        40\n",
-      "     v-cut-right-Lfirst       0.31      0.07      0.11        61\n",
-      "     v-cut-right-Rfirst       0.61      0.28      0.38        40\n",
+      "curve-right-spin-Lfirst       0.19      0.23      0.21        61\n",
+      "curve-right-spin-Rfirst       0.31      0.97      0.47        60\n",
+      "       curve-right-step       0.30      0.31      0.31        58\n",
+      "           jump-one-leg       0.42      0.33      0.37        40\n",
+      "           jump-two-leg       0.36      0.12      0.19        40\n",
+      "   lateral-shuffle-left       0.48      0.72      0.57        43\n",
+      "  lateral-shuffle-right       0.58      0.35      0.44        40\n",
+      "                    run       0.23      0.30      0.26        60\n",
+      "                    sit       1.00      1.00      1.00        49\n",
+      "           sit-to-stand       0.29      0.55      0.38        49\n",
+      "             stair-down       0.10      0.07      0.08        44\n",
+      "               stair-up       0.23      0.45      0.30        44\n",
+      "                  stand       0.75      1.00      0.86        49\n",
+      "           stand-to-sit       0.39      0.69      0.50        49\n",
+      "      v-cut-left-Lfirst       0.21      0.08      0.12        60\n",
+      "      v-cut-left-Rfirst       0.19      0.23      0.21        40\n",
+      "     v-cut-right-Lfirst       0.00      0.00      0.00        61\n",
+      "     v-cut-right-Rfirst       0.43      0.23      0.30        40\n",
       "                   walk       0.00      0.00      0.00        60\n",
       "\n",
-      "              micro avg       0.46      0.46      0.46      1127\n",
-      "              macro avg       0.45      0.50      0.44      1127\n",
-      "           weighted avg       0.43      0.46      0.41      1127\n",
+      "              micro avg       0.35      0.35      0.35      1127\n",
+      "              macro avg       0.32      0.36      0.32      1127\n",
+      "           weighted avg       0.31      0.35      0.31      1127\n",
       "\n"
      ]
     }
@@ -261,67 +252,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pca = PCA()\n",
-    "# pca.fit(np.concatenate((train_features, valid_features), axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pca.explained_variance_ratio_ > 1e-3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_features = pca.transform(train_features)[:, :10]\n",
-    "# valid_features = pca.transform(valid_features)[:, :10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6494864967668315"
+       "PCA(copy=True, iterated_power='auto', n_components=None, random_state=None,\n",
+       "  svd_solver='auto', tol=0.0, whiten=False)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfc = RandomForestClassifier(n_estimators=100, max_depth=4, n_jobs=3)\n",
+    "pca = PCA()\n",
+    "pca.fit(np.concatenate((train_features, valid_features), axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.63586095e-01, 9.57954699e-02, 6.60301993e-02, 5.09248700e-02,\n",
+       "       3.31286222e-02, 2.48107127e-02, 2.38384051e-02, 2.06816033e-02,\n",
+       "       1.72674254e-02, 1.63514843e-02, 1.29753082e-02, 9.64484340e-03,\n",
+       "       8.80479794e-03, 7.58861116e-03, 6.96936242e-03, 6.52518622e-03,\n",
+       "       5.53367203e-03, 3.45051168e-03, 3.26511859e-03, 2.75804987e-03,\n",
+       "       2.34844928e-03, 2.04364491e-03, 1.74280401e-03, 1.59476801e-03,\n",
+       "       1.37449721e-03, 1.29043059e-03, 1.13402996e-03, 9.93009798e-04,\n",
+       "       9.05611288e-04, 8.03266302e-04, 7.34525549e-04, 6.61621193e-04,\n",
+       "       5.86461460e-04, 5.06359077e-04, 4.64819885e-04, 3.71268896e-04,\n",
+       "       3.48587092e-04, 3.40307035e-04, 3.08852532e-04, 2.32927830e-04,\n",
+       "       2.16877822e-04, 1.95945143e-04, 1.42934534e-04, 1.26198151e-04,\n",
+       "       1.00592318e-04, 9.61459281e-05, 8.28635236e-05, 6.86286042e-05,\n",
+       "       5.85551270e-05, 5.26812221e-05, 4.56370347e-05, 4.39279978e-05,\n",
+       "       3.31487504e-05, 1.65582161e-05, 2.25554140e-06, 4.35171329e-07,\n",
+       "       2.43326425e-08])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = pca.transform(train_features)[:, :11]\n",
+    "valid_features = pca.transform(valid_features)[:, :11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6203879802206163"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc = RandomForestClassifier(n_estimators=100, max_depth=5, n_jobs=3)\n",
     "rfc.fit(train_features, train['Label'])\n",
     "accuracy_score(rfc.predict(train_features), train['Label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4738243123336291"
+       "0.3052351375332742"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,39 +361,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      " curve-left-spin-Lfirst       0.09      0.23      0.13        40\n",
+      " curve-left-spin-Rfirst       0.09      0.09      0.09        80\n",
+      "        curve-left-step       0.00      0.00      0.00        60\n",
+      "curve-right-spin-Lfirst       0.42      0.41      0.41        61\n",
+      "curve-right-spin-Rfirst       0.44      0.75      0.56        60\n",
+      "       curve-right-step       0.00      0.00      0.00        58\n",
+      "           jump-one-leg       0.21      0.35      0.26        40\n",
+      "           jump-two-leg       0.50      0.23      0.31        40\n",
+      "   lateral-shuffle-left       0.32      0.95      0.48        43\n",
+      "  lateral-shuffle-right       0.10      0.05      0.07        40\n",
+      "                    run       0.12      0.17      0.14        60\n",
+      "                    sit       1.00      0.84      0.91        49\n",
+      "           sit-to-stand       0.39      0.61      0.48        49\n",
+      "             stair-down       0.00      0.00      0.00        44\n",
+      "               stair-up       0.12      0.27      0.16        44\n",
+      "                  stand       0.84      1.00      0.92        49\n",
+      "           stand-to-sit       0.45      0.59      0.51        49\n",
+      "      v-cut-left-Lfirst       0.48      0.20      0.28        60\n",
+      "      v-cut-left-Rfirst       0.00      0.00      0.00        40\n",
+      "     v-cut-right-Lfirst       0.17      0.07      0.10        61\n",
+      "     v-cut-right-Rfirst       0.42      0.12      0.19        40\n",
+      "                   walk       0.00      0.00      0.00        60\n",
+      "\n",
+      "              micro avg       0.31      0.31      0.31      1127\n",
+      "              macro avg       0.28      0.31      0.27      1127\n",
+      "           weighted avg       0.27      0.31      0.27      1127\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(valid['Label'], preds_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "           metric_params=None, n_jobs=3, n_neighbors=7, p=2,\n",
-       "           weights='uniform')"
+       "0.8636363636363636"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=7, n_jobs=3)\n",
-    "knn.fit(train_features, train['Label'])"
+    "knn.fit(train_features, train['Label'])\n",
+    "accuracy_score(knn.predict(train_features), train['Label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2688553682342502"
+       "0.3052351375332742"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +449,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      " curve-left-spin-Lfirst       0.20      0.53      0.29        40\n",
+      " curve-left-spin-Rfirst       0.36      0.31      0.34        80\n",
+      "        curve-left-step       0.28      0.18      0.22        60\n",
+      "curve-right-spin-Lfirst       0.29      0.52      0.37        61\n",
+      "curve-right-spin-Rfirst       0.66      0.73      0.69        60\n",
+      "       curve-right-step       0.14      0.21      0.17        58\n",
+      "           jump-one-leg       0.14      0.17      0.15        40\n",
+      "           jump-two-leg       0.27      0.07      0.12        40\n",
+      "   lateral-shuffle-left       0.58      0.70      0.63        43\n",
+      "  lateral-shuffle-right       0.31      0.47      0.37        40\n",
+      "                    run       0.49      0.30      0.37        60\n",
+      "                    sit       1.00      1.00      1.00        49\n",
+      "           sit-to-stand       0.61      0.78      0.68        49\n",
+      "             stair-down       0.23      0.14      0.17        44\n",
+      "               stair-up       1.00      0.41      0.58        44\n",
+      "                  stand       0.96      1.00      0.98        49\n",
+      "           stand-to-sit       0.72      0.57      0.64        49\n",
+      "      v-cut-left-Lfirst       0.38      0.28      0.32        60\n",
+      "      v-cut-left-Rfirst       0.12      0.20      0.15        40\n",
+      "     v-cut-right-Lfirst       0.41      0.28      0.33        61\n",
+      "     v-cut-right-Rfirst       0.24      0.12      0.16        40\n",
+      "                   walk       0.05      0.02      0.03        60\n",
+      "\n",
+      "              micro avg       0.41      0.41      0.41      1127\n",
+      "              macro avg       0.43      0.41      0.40      1127\n",
+      "           weighted avg       0.43      0.41      0.40      1127\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(valid['Label'], preds_knn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +511,7 @@
        "              verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,16 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2803904170363798"
+       "0.3070097604259095"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
