--- a/benchmarking.ipynb
+++ b/benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,28 +65,28 @@
     {
      "data": {
       "text/plain": [
-       "[('v-cut-left-Rfirst', 240),\n",
-       " ('run', 240),\n",
-       " ('curve-left-spin-Rfirst', 240),\n",
-       " ('v-cut-right-Rfirst', 240),\n",
+       "[('curve-left-spin-Rfirst', 260),\n",
+       " ('curve-right-spin-Lfirst', 241),\n",
        " ('curve-right-spin-Rfirst', 240),\n",
-       " ('stand-to-sit', 240),\n",
-       " ('curve-right-spin-Lfirst', 240),\n",
-       " ('curve-left-spin-Lfirst', 240),\n",
-       " ('walk', 240),\n",
-       " ('sit', 240),\n",
        " ('v-cut-left-Lfirst', 240),\n",
-       " ('jump-two-leg', 240),\n",
-       " ('stand', 240),\n",
-       " ('sit-to-stand', 240),\n",
-       " ('v-cut-right-Lfirst', 239),\n",
+       " ('run', 240),\n",
+       " ('walk', 240),\n",
+       " ('v-cut-right-Lfirst', 240),\n",
        " ('curve-left-step', 239),\n",
-       " ('jump-one-leg', 239),\n",
-       " ('lateral-shuffle-left', 239),\n",
-       " ('curve-right-step', 237),\n",
-       " ('lateral-shuffle-right', 237),\n",
-       " ('stair-down', 234),\n",
-       " ('stair-up', 234)]"
+       " ('curve-right-step', 235),\n",
+       " ('sit-to-stand', 229),\n",
+       " ('sit', 229),\n",
+       " ('stand', 229),\n",
+       " ('stand-to-sit', 229),\n",
+       " ('lateral-shuffle-left', 223),\n",
+       " ('v-cut-left-Rfirst', 220),\n",
+       " ('v-cut-right-Rfirst', 220),\n",
+       " ('jump-two-leg', 220),\n",
+       " ('lateral-shuffle-right', 220),\n",
+       " ('curve-left-spin-Lfirst', 220),\n",
+       " ('jump-one-leg', 219),\n",
+       " ('stair-up', 218),\n",
+       " ('stair-down', 218)]"
       ]
      },
      "execution_count": 6,
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,9 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 212898 into shape (57)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-dbf0b57b9e38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# train_features /= train_features.max(axis=0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mvalid_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# valid_features /= valid_features.max(axis=0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 212898 into shape (57)"
+     ]
+    }
+   ],
    "source": [
     "train_features = np.concatenate(train['features'].values).reshape(-1, 19*3)\n",
     "# train_features /= train_features.max(axis=0)\n",
