--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nilavro/miniconda3/envs/analytics/lib/python3.7/site-packages/matplotlib/__init__.py:886: MatplotlibDeprecationWarning: \n",
+      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
+      "  \"found relative to the 'datapath' directory.\".format(key))\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +47,7 @@
        "(6401, 3)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +131,7 @@
        "4  Subject02  Subject02/Subject02_Aufnahme004.csv             jump-one-leg"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +199,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +219,7 @@
        "23"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +261,7 @@
        "         'lay': 16})"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +457,7 @@
        "4  29264  28408  31784  28133  29295  29244  33216  37140  34736  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +477,7 @@
        "(6159, 19)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +526,7 @@
        "34640.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +555,7 @@
        "(6385, 3)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +575,7 @@
        "(6401, 3)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,16 +615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5258, 3)"
+       "(5069, 3)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,16 +635,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1127, 3)"
+       "(1316, 3)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,16 +673,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1127, 3)"
+       "(1316, 3)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,16 +693,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5258, 3)"
+       "(5069, 3)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,19 +713,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([ 143, 3289, 5250, 4404, 5316, 5456, 4782, 4485, 3146, 2052,\n",
+       "Int64Index([3506,  921, 4446, 1962, 4060,  464, 2238, 3164, 4879, 4458,\n",
        "            ...\n",
-       "              15, 4054,  750, 4778,  816,  714,   95, 5411,  785, 2910],\n",
-       "           dtype='int64', length=5258)"
+       "            2950, 3981, 3391, 3915, 3788, 2284, 4051,  773, 2094, 2838],\n",
+       "           dtype='int64', length=5069)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,19 +736,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([3518, 3519, 3520, 3521, 3522, 3523, 3524, 3525, 3526, 3527,\n",
+       "Int64Index([   0,    1,    2,    3,    4,    5,    6,    7,    8,    9,\n",
        "            ...\n",
-       "            6391, 6392, 6393, 6394, 6395, 6396, 6397, 6398, 6399, 6400],\n",
-       "           dtype='int64', length=1127)"
+       "            5951, 5952, 5953, 5954, 5955, 5956, 5957, 5958, 5959, 5960],\n",
+       "           dtype='int64', length=1316)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +778,7 @@
        "(8139, 3)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +835,7 @@
        "         8047.52716895, 12217.84562261,  9789.94782326])}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +871,7 @@
        "         6039.98701928, 11521.67138042, 10815.64861513])}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +907,7 @@
        "         7358.70958822,  9869.50028762, 11129.91074215])}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +927,7 @@
        "['subj_stats.pkl']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
